--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2,14 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-.card {
-  background-color: rgba(255, 255, 255, 0.849);
-  border-radius: 0.25rem;
-  padding: 2rem;
-  -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
-    0 5px 15px 0 rgba(0, 0, 0, 0.08);
-  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
-    0 5px 15px 0 rgba(0, 0, 0, 0.08);
+.lds-hourglass {
+  display: block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+  margin: auto;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 6px;
+  box-sizing: border-box;
+  border: 26px solid #dae1e7;
+  border-color: #dae1e7 transparent #dae1e7 transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.11, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
 }
 
 .form-label {
@@ -38,61 +61,6 @@
   -ms-flex: 1;
   flex: 1;
   margin-right: 0.5rem;
-}
-
-.toggle {
-  position: relative;
-  display: inline-block;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  border-radius: 9999px;
-  cursor: pointer;
-  height: 1.5rem;
-  width: 3rem;
-}
-.toggle:focus {
-  outline: 0;
-  -webkit-box-shadow: 0 0 0 4px rgba(52, 144, 220, 0.5);
-  box-shadow: 0 0 0 4px rgba(52, 144, 220, 0.5);
-}
-.toggle:before {
-  display: inline-block;
-  border-radius: 9999px;
-  height: 100%;
-  width: 100%;
-  background-color: #dae1e7;
-  content: "";
-  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-  -webkit-transition: background-color 0.2s ease;
-  transition: background-color 0.2s ease;
-}
-.toggle[aria-checked="true"]:before {
-  background-color: #794acf;
-}
-.toggle:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 9999px;
-  height: 1.5rem;
-  width: 1.5rem;
-  background-color: #fff;
-  border-width: 1px;
-  border-color: #dae1e7;
-  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-  content: "";
-  -webkit-transition: -webkit-transform 0.2s ease;
-  transition: -webkit-transform 0.2s ease;
-  transition: transform 0.2s ease;
-  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
-.toggle[aria-checked="true"]:after {
-  -webkit-transform: translateX(1.5rem);
-  transform: translateX(1.5rem);
 }
 
 .border-t-purple {
